# paas-ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  getting-started.ipynb  pyproject.toml  run_vectorstore_tests.py
rag_data/chroma_local/: chroma.sqlite3
src/paas_ai/api/: main.py
src/paas_ai/api/middleware/: logging.py  security.py
src/paas_ai/api/models/: __init__.py  agent.py
src/paas_ai/api/routers/: agent.py
src/paas_ai/cli/: main.py
src/paas_ai/cli/commands/: agent.py  mcp.py  rag.py
src/paas_ai/cli/commands/agent/: __init__.py  ask.py  chat.py
src/paas_ai/cli/commands/config/: main.py
src/paas_ai/cli/commands/rag/: __init__.py  reports.py  resources.py  search.py  status.py  sync.py
src/paas_ai/cli/utils/: progress.py
src/paas_ai/core/agents/: __init__.py  base_agent.py  multi_agent_system.py  new_design.md  rag_agent.py  token_tracking.py  tool_registry.py
src/paas_ai/core/agents/nodes/: __init__.py  agent_nodes.py
src/paas_ai/core/agents/prompts/designer/: system.md
src/paas_ai/core/agents/prompts/k8s_manifest/: system.md
src/paas_ai/core/agents/prompts/paas_manifest_generator/: system.md
src/paas_ai/core/agents/prompts/supervisor/: system.md
src/paas_ai/core/agents/tools/: __init__.py  design_tools.py  file_tools.py  handoff_tools.py  k8s_tools.py  paas_generation_tools.py  rag_search.py
src/paas_ai/core/config/: __init__.py  loader.py  schemas.py
src/paas_ai/core/rag/: README.md  Reame.md  __init__.py  config.py  pipeline.py
src/paas_ai/core/rag/citations/: README.md  enricher.py  formatters.py  strategies.py
src/paas_ai/core/rag/embeddings/: registry.py  sentence_transformers.py
src/paas_ai/core/rag/loaders/: __init__.py  crawl4ai_web_strategy.py  pdf.py  registry.py  web.py
src/paas_ai/core/rag/processing/: pipeline.py
src/paas_ai/core/rag/processing/stages/: enrich.py  filter.py  split.py  validate.py
src/paas_ai/core/rag/retrievers/: __init__.py  factory.py
src/paas_ai/core/rag/splitters/: base.py  html.py  token.py
src/paas_ai/core/rag/vectorstore/: __init__.py  base.py  chroma.py  factory.py
src/paas_ai/utils/: logging.py
test_data/: alice_adventure.md  tom_jerry_space.md
tests/fixtures/rag_data/: sample.md  sample_resources.csv
tests/unit/test_cli/test_commands/test_agent/: README.md  test_ask.py  test_chat.py  test_factory.py  test_init.py  test_integration.py
tests/unit/test_core/test_rag/: test_config.py
